[package]
name = "citrus"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Avery R. <contact@nekodjin.org>"]

[dependencies]
rand = "0.8"

[dependencies.noise]
version = "0.7"
default-features = false

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "gif"]
