[package]
name = "citrus"
version = "1.0.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Avery R. <contact@nekodjin.org>"]
description = "Generate images from random noise."

[dependencies]
rand = "0.8"

[dependencies.clap]
version = "3.1"
features = ["derive"]

[dependencies.noise]
version = "0.7"
default-features = false

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "gif"]
